--- a/index.css
+++ b/index.css
@@ -9,9 +9,13 @@
 
 h1,h2,h3,p,label { font-family: 'elite'}
 
+#_29 > div.nd-branch.nd-branch-focal > div > div.nd-noode-box.nd-noode-box-active {
+    overflow:hidden;
+}
+
 .center {text-align:center}
 
-.szj {max-width:230px;border-radius:200px;}
+.szj {max-width:220px;border-radius:200px;}
 
 .szj2 {max-width:100px;border-radius:200px;}
 
@@ -190,7 +194,7 @@ code[class*="language-"] {
 
 @media (max-height: 800px) {
     .nd-noode {
-        max-height: 80vh;
+        max-height: 85vh;
     }
 }
 
@@ -206,7 +210,7 @@ code[class*="language-"] {
 
 @media (min-height: 801px) {
     .nd-noode {
-        max-height: 700px;
+        max-height: 800px;
     }
 }
 
