--- a/index.css
+++ b/index.css
@@ -117,7 +117,9 @@ code[class*="language-"] {
 
 .nd-canvas {
     outline: none;
-    background-color: #444;
+    /*background-color: #444;*/
+    background: url("img/3t1nPQ.webp");
+    background-size: cover;
     width: 100%;
     height: 100%;
 }
