--- a/index.css
+++ b/index.css
@@ -129,10 +129,10 @@ code[class*="language-"] {
 
 .nd-canvas {
     outline: none;
-    /*background-color: #444;*/
-    background: url("img/abstract-background-4675153_1280_grey.jpg");
-    background-size: cover;
+    /* background-color: #444; */
+    background: url("img/johatter.jpg");
     width: 100%;
+    box-shadow: 0 0 10px 10px white inset;
     height: 100%;
 }
 
